delete file and modified index

--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<!-- my css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+    <!-- my css -->
     <style>
-        section {
-            min-height: 420px;
-        }
+      section {
+        min-height: 420px;
+      }
     </style>
     <title>Portfolio Bootstrap 4</title>
   </head>
   <body class="mt-5">
     <!-- navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-secondary">
-        <div class="container">
+      <div class="container">
         <a class="navbar-brand" href="#">Rahmat Hidaytullah</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -33,172 +33,178 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
+              <a class="nav-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
           </ul>
         </div>
-        </div>
-      </nav>
+      </div>
+    </nav>
     <!-- akhir navbar -->
     <!-- jumbotron -->
     <div class="jumbotron jumbotron-fluid">
-        <div class="container text-center">
-            <img src="img/photo.jpeg" width="25%" alt="photo" class="rounded-circle img-thumbnail">
-          <h1 class="display-4">Rahmat Hidayatullah</h1>
-          <p class="lead">Web Development | Data Analyst | IT-Support</p>
-        </div>
+      <div class="container text-center">
+        <img src="img/photo.jpeg" width="25%" alt="photo" class="rounded-circle img-thumbnail" />
+        <h1 class="display-4">Rahmat Hidayatullah</h1>
+        <p class="lead">Web Development | Data Analyst | IT-Support</p>
       </div>
+    </div>
     <!-- akhir jumbutron -->
-      <!-- about -->
-      <section id="about" class="about">
+    <!-- about -->
+    <section id="about" class="about">
       <div class="container">
         <div class="row">
-            <div class="col text-center">
-                <h2 class="mb-4">About</h2>
-            </div>
+          <div class="col text-center">
+            <h2 class="mb-4">About</h2>
+          </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-5 text-justify">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, cumque minus enim itaque iure eius praesentium exercitationem distinctio dicta a mollitia numquam, placeat incidunt. Culpa tempore reprehenderit voluptates enim modi.</p>
-            </div>
-            <div class="col-md-5 text-justify">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque sed tenetur sunt veritatis molestiae autem voluptatem, commodi, obcaecati officiis similique sapiente ipsum dicta maxime voluptates repudiandae. Earum unde ullam qui!</p>
-            </div>
+          <div class="col-md-5 text-justify">
+            <p>
+              Profesional yang berorientasi pada tujuan untuk mengejar perubahan karier jangka panjang dalam bidang Web Development. Memiliki pengalaman 10 tahun disertai keterampilan analitis, pemecahan masalah, mahir komputer, dan bisa
+              menindaklanjuti proyek dari awal hingga akhir
+            </p>
+          </div>
+          <div class="col-md-5 text-justify">
+            <p>
+              Memiliki pengalaman dalam pengolahan administrasi di beberapa perusahaan selama 10 tahun. Dengan keterampilan analitis, pemecahan masalah, mahir komputer, serta mampu berkomunikasi dengan baik sehingga dapat memudahkan dalam
+              beradaptasi dan berkolaborasi individu maupun team di dalam perusahaan.
+            </p>
+          </div>
         </div>
       </div>
-      </section>
-      <!-- akhir about -->
-      <!-- portfolio -->
-      <section id="portfolio" >
+    </section>
+    <!-- akhir about -->
+    <!-- portfolio -->
+    <section id="portfolio">
       <div class="container">
         <div class="row mb-4 pt-4">
-            <div class="col text-center">
-                <h2>Portfolio</h2>
-            </div>
+          <div class="col text-center">
+            <h2>Portfolio</h2>
+          </div>
         </div>
         <!-- row 1 -->
         <div class="row mb-4">
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/1.png" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/1.png" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/2.png" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/2.png" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/3.png" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/3.png" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            </div>
-            <!-- akhir row 1 -->
+          </div>
+        </div>
+        <!-- akhir row 1 -->
 
-            <!-- row 2 -->
-            <div class="row mb-4">
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/4.png" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+        <!-- row 2 -->
+        <div class="row mb-4">
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/4.png" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/5.png" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/5.png" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            <div class="col-md">
-                <div class="card">
-                    <img class="card-img-top" src="../portofolio bootstrap4/img/bg/japan.jpg" alt="Card image cap">
-                    <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+          </div>
+          <div class="col-md">
+            <div class="card">
+              <img class="card-img-top" src="img/bg/japan.jpg" alt="Card image cap" />
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
+          </div>
         </div>
         <!-- akhir row 2 -->
       </div>
     </section>
-      <!-- akhir portfolio -->
-      <!-- contact -->
-      <section id="contact" class="contact mb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    <h2>Contact Us</h2>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="col-lg-4">
-                    <div class="card text-white bg-primary mb-3">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Contact us</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, iure.</p>
-                        </div>
-                    </div>
-                    <ul class="list-group">
-                        <li class="list-group-item"><h1>Location</h1></li>
-                        <li class="list-group-item">My Office</li>
-                        <li class="list-group-item">Jl. Sumatera Gg. Damai No 105, Tangsel</li>
-                        <li class="list-group-item">Banten, Indonesia</li>
-                    </ul>
-                </div>
-                <div class="col-lg-6">
-                    <form>
-                        <div class="form-group">
-                            <label for="nama">Nama</label>
-                            <input type="text" class="form-control" id="nama" placeholder="Masukan Nama">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">E-Mail</label>
-                            <input type="text" class="form-control" id="email" placeholder="Masukan E-Mail">
-                        </div>
-                        <div class="form-group">
-                            <label for="telp">No Telp</label>
-                            <input type="text" class="form-control" id="telp" placeholder="Masukan No Telp">
-                        </div>
-                        <div class="form-group">
-                            <label for="pesan">Pesan</label>
-                            <textarea name="pesan" class="form-control" id="pesan" rows="3"></textarea>
-                        </div>
-                    <div class="form-group">
-                        <button type="button" class="btn btn-primary">Kirim Pesan</button>
-                    </div>
-                    </form>
-                </div>
-            </div>
+    <!-- akhir portfolio -->
+    <!-- contact -->
+    <section id="contact" class="contact mb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h2>Contact Us</h2>
+          </div>
         </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <div class="card text-white bg-primary mb-3">
+              <div class="card-body text-center">
+                <h5 class="card-title">Contact us</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, iure.</p>
+              </div>
+            </div>
+            <ul class="list-group">
+              <li class="list-group-item"><h1>Location</h1></li>
+              <li class="list-group-item">My Office</li>
+              <li class="list-group-item">Jl. Sumatera Gg. Damai No 105, Tangsel</li>
+              <li class="list-group-item">Banten, Indonesia</li>
+            </ul>
+          </div>
+          <div class="col-lg-6">
+            <form>
+              <div class="form-group">
+                <label for="nama">Nama</label>
+                <input type="text" class="form-control" id="nama" placeholder="Masukan Nama" />
+              </div>
+              <div class="form-group">
+                <label for="email">E-Mail</label>
+                <input type="text" class="form-control" id="email" placeholder="Masukan E-Mail" />
+              </div>
+              <div class="form-group">
+                <label for="telp">No Telp</label>
+                <input type="text" class="form-control" id="telp" placeholder="Masukan No Telp" />
+              </div>
+              <div class="form-group">
+                <label for="pesan">Pesan</label>
+                <textarea name="pesan" class="form-control" id="pesan" rows="3"></textarea>
+              </div>
+              <div class="form-group">
+                <button type="button" class="btn btn-primary">Kirim Pesan</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- akhir contact -->
     <!-- footer -->
     <footer class="bg-dark text-white">
-        <div class="container">
-            <div class="row pt-3">
-                <div class="col text-center">
-                    <p>Copyright 2022.</p>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row pt-3">
+          <div class="col text-center">
+            <p>Copyright 2022.</p>
+          </div>
         </div>
+      </div>
     </footer>
     <!-- akhir footer -->
     <!-- Optional JavaScript -->
